Add support for listing and creating users via admin api.
#88
