# src/api/admin/v1/mappers/index.js
@@ -5,6 +5,8 @@ const channel = require('./channel');
 const channelList = require('./channel-list');
 const realm = require('./realm');
 const realmList = require('./realm-list');
+const user = require('./user');
+const userList = require('./user-list');
 
 /**
  * @class AdminApiV1Mappers
@@ -17,4 +19,6 @@ module.exports = {
   channelList,
   realm,
   realmList,
+  user,
+  userList,
 };
